
* 2013-07-26 - thorben.betten@open-xchange.com

 - Fix for bug 27706: Deal with UTC time zone set for UTC properties

* 2013-07-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 27722: Introduced various optimizations to speed up batch deletion of many files  

* 2013-07-26 - martin.herfurth@open-xchange.com

 - Fix for bug 27210: Avoid event handling from interrupting user deletion.

* 2013-07-25 - marcus.klein@open-xchange.com

 - Fix for bug 26607: Optimized JMX queries for certain MBeans using object names and removed multi threading.

* 2013-07-25 - thorben.betten@open-xchange.com

 - Fix for bug 27345: Suppress "Shared files" folder if it does not contain user-visible subfolders
 - Fix for bug 27647: Don't consider HTML content containing <img> tags as empty content
 - Fix for bug 26920: Ensure versions are deleted prior to deleting document

* 2013-07-24 - martin.herfurth@open-xchange.com

 - Fix for bug 27591: Handle Exchange all-day flag: X-MICROSOFT-CDO-ALLDAYEVENT
 - Fix for bug 27584: Handle Exchange all-day flag: X-MICROSOFT-CDO-ALLDAYEVENT

* 2013-07-24 - tobias.friedrich@open-xchange.com

 - Fix for bug 27747: Bypass com.openexchange.servlet.maxBodySize when uploading / downloading files via drive servlet  
 - Fix for bug 24534: Added import/export of distribution lists in csv-file

* 2013-07-23 - marc.arens@open-xchange.com

 - Fix for bug 27712: Set maxForm- and maxBufferedPostSize to com.openexchange.servlet.maxBodySize

* 2013-07-23 - jan.bauerdick@open-xchange.com

 - Fix for bug 27718: Changed defaultAvailability in AvailabilityChecker

* 2013-07-23 - tobias.friedrich@open-xchange.com

 - Fix for bug 27476: Implicitly add internal user in change exceptions if missing from imported iCal 
 - Fix for bug 27161: Pass DISTANT_FUTURE when deleting a folder via WebDAV 

* 2013-07-22 - tobias.friedrich@open-xchange.com

 - Fix for bug 27663: Always include ORDER BY columns in SELECT clause when using UNION SELECTs 